<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_header"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_sort_messages_enter_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/ch_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/photo"
        app:layout_constraintEnd_toStartOf="@+id/ch_audio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />



    <CheckBox
        android:id="@+id/ch_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ch_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_header" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_checkboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ch_audio,ch_photo"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="149dp" />

    <ScrollView
        android:id="@+id/chip_scroll"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_checkboxes">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" />
    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_layout_key_word"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/key_word"
        app:layout_constraintTop_toBottomOf="@id/chip_scroll">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_key_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_close"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_close"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_key_word"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_layout_key_word" />

    <Button
        android:id="@+id/btn_add_key_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Добавить"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_close"
        app:layout_constraintTop_toBottomOf="@id/txt_layout_key_word" />




</androidx.constraintlayout.widget.ConstraintLayout>