<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.announce.presenter.login.viewmodel.LoginFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout_email"
            style="@style/AnnounceApp.TextInputLayout.Authorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginLeft="@dimen/glutter"
            android:layout_marginRight="@dimen/glutter"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintBottom_toTopOf="@+id/txt_layout_password"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="24dp"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:text="@={viewModel.state.user.email}"
                style="@style/AnnounceApp.TextInputEditText.Authorization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout_password"
            style="@style/AnnounceApp.TextInputLayout.Authorization"        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/glutter"
            android:layout_marginRight="@dimen/glutter"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_layout_email"
            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:text="@={viewModel.state.user.password}"
                style="@style/AnnounceApp.TextInputEditText.Authorization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginLeft="@dimen/glutter"
            android:layout_marginRight="@dimen/glutter"
            app:backgroundTint="?colorAccent"
            android:onClick="@{() -> viewModel.login()}"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_layout_password"
            tools:layout_editor_absoluteX="143dp" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/btn_login"
            app:layout_constraintLeft_toLeftOf="@id/btn_login"
            app:layout_constraintRight_toRightOf="@id/btn_login"/>

        <TextView
            android:id="@+id/tv_no_account"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintBottom_toTopOf="@id/btn_registrate"
            app:layout_constraintVertical_chainStyle="packed"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registrate"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="?colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/registration"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_no_account"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>